# gptelegram

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
core/: constants.py  settings.py
database/: connection.py  ddl.sql
modules/: context.py  message.py  model.py  schema.py  utils.py
